--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary ">
-    <div class="container-fluid">
-      <a class="navbar-brand">TaskMate</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg ">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bolder fs-3 text-info" >TaskMate</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item fs-5 ms-5">
+          <a class="nav-link active text-warning" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item fs-5 ms-5">
+          <a class="nav-link text-warning" href="/createTask">Create Tasks</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
