--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand fw-bolder fs-3 text-info" >TaskMate</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item fs-5 ms-5">
-          <a class="nav-link active text-warning" aria-current="page" href="/">Home</a>
+          <a class="nav-link active text-info" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item fs-5 ms-5">
-          <a class="nav-link text-warning" href="/createTask">Create Tasks</a>
+          <a class="nav-link text-info" href="/task/alltasks">Show Tasks</a>
         </li>
       </ul>
     </div>
