--- a/views/taskCreate.ejs
+++ b/views/taskCreate.ejs
@@ -5,8 +5,9 @@
 </head>
 <body>
     <%- include('./partials/nav') %>
-    <div class="d-flex justify-content-center mt-5 vh-100">
-      <div class="form-container w-50">
+    <div class="d-flex justify-content-center mt-5">
+      <div class="form-container w-50 boder-dark shadow py-5 px-5">
+        <div class="mb-5 fw-bolder text-warning fs-4">Stay organized and productive – Add your tasks and take control of your day!</div>
         <form action="/task/add" method="post">
           <div class="mb-3">
             <label for="taskName" class="form-label fw-bold text-info fs-4">Task Name</label>
@@ -24,7 +25,6 @@
         </form>
       </div>
     </div>
-  
     <%- include('./partials/script') %>
 </body>
 </html>
