some changes are made for deployement

--- a/views/taskCreate.ejs
+++ b/views/taskCreate.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head') %>
+    <title>Create Task</title>
 </head>
 <body>
     <%- include('./partials/nav') %>
