--- a/views/taskView.ejs
+++ b/views/taskView.ejs
@@ -32,7 +32,7 @@
                                 <% } %>
                             </td>
                 
-                            <td><a href="/task/<%- t._id %>" class="btn btn-outline-warning">Update Task</a></td>
+                            <td><a href="/api/<%- t._id %>" class="btn btn-outline-warning">Update Task</a></td>
                             <td><a href="delete/<%- t._id %>" class="btn btn-outline-danger">Delete Task</a></td>
                         </tr>
                     <% }); %>
