--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
           <a class="nav-link active text-info" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item fs-5 ms-5">
-          <a class="nav-link text-info" href="/task/alltasks">Show Tasks</a>
+          <a class="nav-link text-info" href="/api/alltasks">Show Tasks</a>
         </li>
       </ul>
     </div>
