--- a/views/taskCreate.ejs
+++ b/views/taskCreate.ejs
@@ -9,7 +9,7 @@
     <div class="d-flex justify-content-center mt-5">
       <div class="form-container w-50 boder-dark shadow py-5 px-5">
         <div class="mb-5 fw-bolder text-warning fs-4">Stay organized and productive – Add your tasks and take control of your day!</div>
-        <form action="/task/add" method="post">
+        <form action="/api/tasks" method="post">
           <div class="mb-3">
             <label for="taskName" class="form-label fw-bold text-info fs-4">Task Name</label>
             <input type="text" class="form-control w-100 text-info border-info bg-dark" id="taskName" name="taskName" placeholder="Enter task name">
