--- a/views/singleTaskView.ejs
+++ b/views/singleTaskView.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <%- include('./partials/head') %>
-    <title>Task <%- i + 1 %></title>
+    <title>Task</title>
 </head>
 <body>
     <%- include('./partials/nav') %>
@@ -14,31 +14,29 @@
                 <th>Task Name</th>
                 <th>Task Description</th>
                 <th>Task Status</th>
-                <th>Update Task</th>
-                <th>Delete Task</th>
                 </tr>
             </thead>
             <tbody class="table-warning">
-                <% task.forEach((t, i) => { %>
+                <% task.forEach((t, i) => { %>  
                     <tr class="fw-bold">
                         <td  class="<%= t.status ? 'text-success' : 'text-danger' %>"><%- i + 1 %></td>
                         <td  class="<%= t.status ? 'text-success' : 'text-danger' %>"><%- t.taskName %></td>
                         <td  class="<%= t.status ? 'text-success' : 'text-danger' %>"><%- t.description %></td>
                         <td class="<%= t.status ? 'text-success' : 'text-danger' %>">
                             <% if (t.status) { %>
-                                Completed
+                                Task Completed
                             <% } else { %>
                                 Not Completed
                             <% } %>
                         </td>
-            
-                        <td><a href="/task/<%- t._id %>" class="btn btn-outline-warning">Update Task</a></td>
-                        <td><a href="delete/<%- t._id %>" class="btn btn-outline-danger">Delete Task</a></td>
                     </tr>
                 <% }); %>
             </tbody>                
         </table>
   </div>
-    <%- include('./partials.script') %>
+  <div class="container mt-4 d-flex justify-content-center w-25">
+    <a href="/api/alltasks" class="btn btn-outline-warning w-100" >Go back</a>
+  </div>
+    <%- include('./partials/script') %>
 </body>
 </html>
