--- a/views/taskUpdate.ejs
+++ b/views/taskUpdate.ejs
@@ -8,9 +8,7 @@
     <%- include('./partials/nav') %>
     <div class="d-flex justify-content-center mt-5">
         <div class="form-container w-50 boder-dark shadow py-5 px-5">
-          <!-- <div class="mb-5 fw-bolder text-warning fs-4">Stay organized and productive – Add your tasks and take control of your day!</div> -->
-          <div class="mb-5 fw-bolder text-warning fs-4">Update your Task</div>
-
+          <div class="mb-3 fw-bolder text-warning fs-4">Update your Task</div>
           <form action="updateTask/<%- task._id %>?_method=PUT" method="POST">
             <div class="mb-3">
               <label for="taskName" class="form-label fw-bold text-info fs-4">Task Name</label>
@@ -26,6 +24,7 @@
             </div>
             <button type="submit" class="btn btn-outline-warning w-100">Update</button>
           </form>
+          <a href="/api/alltasks" class="btn btn-outline-warning mt-4 w-25" >Go back</a>
         </div>
       </div>
     <%- include('./partials/script') %>    
