--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -21,7 +21,7 @@
                 <button type="submit" class="btn btn-primary w-100">Submit</button>
             </form>
             <div class="container mt-3">
-                <p class="fs-5 fw-bold">Don't have an account? <a href="userSignup" class="text-dark">Register</a></p>
+                <p class="fs-5 fw-bold">Don't have an account? <a href="/signup" class="text-dark">Register</a></p>
             </div>
         </div>
     </div>
