signup and login working

--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -9,7 +9,7 @@
     <div class="container d-flex justify-content-center">
         <div class="card shadow-lg p-4 rounded mt-4 mb-4 bg-secondary w-50" style="width: 350px;">
             <h2 class="text-center mb-3 ">User Login</h2>
-            <form action="#" method="post">
+            <form action="/user/Login" method="post">
                 <div class="mb-3">
                     <label for="email" class="form-label fs-5 fw-bold">Email</label>
                     <input type="email" class="form-control" name="email" id="email" placeholder="example@email.com" aria-describedby="email">
