--- a/views/userSignup.ejs
+++ b/views/userSignup.ejs
@@ -9,7 +9,7 @@
     <div class="container d-flex justify-content-center">
         <div class="card shadow-lg p-4 rounded mt-4 mb-4 bg-secondary w-50" style="width: 350px;">
             <h2 class="text-center mb-3 ">User Signup</h2>
-            <form action="#" method="post">
+            <form action="/user/Signin" method="post">
                 <div class="mb-3">
                     <label for="fullName" class="form-label fs-5 fw-bold">Full Name</label>
                     <input type="text" class="form-control" name="fullName" id="fullName" placeholder="Full Name" aria-describedby="fullName">
