--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,6 +10,15 @@
           <li class="nav-item fs-5 ms-5">
             <a class="nav-link text-info" href="/api/alltasks">Show Tasks</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">SignOut</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Another ac`tion</a></li> -->
+            </ul>
+          </li>
         </ul>
       </div>
     <% } %>
