--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,11 +12,10 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              <%- locals.user.email %>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">SignOut</a></li>
-              <!-- <li><a class="dropdown-item" href="#">Another ac`tion</a></li> -->
+              <li><a class="dropdown-item text-info" href="#">SignOut</a></li>
             </ul>
           </li>
         </ul>
