--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -9,13 +9,12 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Welcome, <span id="username">User</span>!</h2>
-                <p class="text-muted">Here is a quick summary of your tasks.</p>
+                <p class="text-info fw-bolder fs-1">Welcome, <span id="username">User</span>!</p>
+                <p class="text-secondary fs-5">Here is a quick summary of your tasks.</p>
             </div>
         </div>
     </div>
 
-    <!-- Task Summary -->
     <div class="container mt-3">
         <div class="row text-center">
             <div class="col-md-4">
@@ -39,7 +38,6 @@
         </div>
     </div>
 
-    <!-- Quick Actions -->
     <div class="container mt-4 text-center">
         <a href="#" class="btn btn-primary">View All Tasks</a>
         <a href="#" class="btn btn-success">Add New Task</a>
