--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,17 +5,17 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item fs-5 ms-5">
-            <a class="nav-link active text-info" aria-current="page" href="/">Home</a>
+            <a class="nav-link active text-info fw-bolder" aria-current="page" href="/dashboard">Home</a>
           </li>
           <li class="nav-item fs-5 ms-5">
-            <a class="nav-link text-info" href="/api/alltasks">Show Tasks</a>
+            <a class="nav-link text-info fw-bolder" href="/api/alltasks">Show Tasks</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown ms-5 fs-5">
             <a class="nav-link dropdown-toggle text-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%- locals.user.email %>
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item text-info" href="#">SignOut</a></li>
+            <ul class="dropdown-menu bg-dark">
+              <li><a class="dropdown-item text-info bg-dark fw-bold" href="/user/Signout">SignOut</a></li>
             </ul>
           </li>
         </ul>
