--- a/views/taskView.ejs
+++ b/views/taskView.ejs
@@ -36,8 +36,11 @@
                             <td><a href="delete/<%- t._id %>" class="fs-3">🗑</a></td>
                         </tr>
                     <% }); %>
-                </tbody>                
+                </tbody>      
             </table>
+      </div>
+      <div class="container text-center mt-3">
+        <a class="btn btn-outline-warning w-25" href="/dashboard">Go back</a>
       </div>
     <%- include('./partials/script') %>
 </body>
