update views and routes

--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -39,8 +39,8 @@
     </div>
 
     <div class="container mt-4 text-center">
-        <a href="#" class="btn btn-primary">View All Tasks</a>
-        <a href="#" class="btn btn-success">Add New Task</a>
+        <a href="/api/alltasks" class="btn btn-primary">View All Tasks</a>
+        <a href="/createTask" class="btn btn-success">Add New Task</a>
     </div>
     <%- include('./partials/script') %>
 </body>
