--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,9 +7,9 @@
           <li class="nav-item fs-5 ms-5">
             <a class="nav-link active text-info fw-bolder" aria-current="page" href="/dashboard">Home</a>
           </li>
-          <li class="nav-item fs-5 ms-5">
-            <a class="nav-link text-info fw-bolder" href="/api/alltasks">Show Tasks</a>
-          </li>
+          <!-- <li> class="nav-item fs-5 ms-5">
+             <a class="nav-link text-info fw-bolder" href="">Show Tasks</a> 
+          </li>  -->
           <li class="nav-item dropdown ms-5 fs-5">
             <a class="nav-link dropdown-toggle text-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%- locals.user.email %>
