--- a/views/taskCreate.ejs
+++ b/views/taskCreate.ejs
@@ -24,6 +24,9 @@
           </div>
           <button type="submit" class="btn btn-outline-warning w-100">Submit</button>
         </form>
+        <div class="cotainer mt-4">
+          <a href="/dashboard" class="btn btn-outline-primary w-25">Go back</a>
+        </div>
       </div>
     </div>
     <%- include('./partials/script') %>
