--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,11 +6,11 @@
 </head>
 <body>
     <%- include('./partials/nav') %>
-    <header class="bg-dark text-warning text-center py-5">
+    <header class="bg-dark text-info text-center py-5">
         <div class="container">
             <h1 class="fw-bold">Simplify Your Workflow with Our Task Management System</h1>
             <p class="lead mt-3">Stay organized and boost your productivity with our intuitive task management system.</p>
-            <a href="/login" class="btn btn-outline-warning btn-lg mt-3">Get Started</a>
+            <a href="/login" class="btn btn-outline-info btn-lg mt-3">Get Started</a>
         </div>
     </header>
     
