--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,12 @@
-<nav class="navbar navbar-expand-lg sticky-top">
+<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bolder fs-3 text-info" >TaskMate</a>
+    <a class="navbar-brand fw-bolder fs-2 text-warning" >TaskMate</a>
     <% if (locals.user) { %>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item fs-5 ms-5">
             <a class="nav-link active text-info fw-bolder" aria-current="page" href="/dashboard">Home</a>
           </li>
-          <!-- <li> class="nav-item fs-5 ms-5">
-             <a class="nav-link text-info fw-bolder" href="">Show Tasks</a> 
-          </li>  -->
           <li class="nav-item dropdown ms-5 fs-5">
             <a class="nav-link dropdown-toggle text-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%- locals.user.email %>
