--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -7,21 +7,21 @@
 <body>
     <%- include('./partials/nav') %>
     <div class="container d-flex justify-content-center">
-        <div class="card shadow-lg p-4 rounded mt-4 mb-4 bg-secondary w-50" style="width: 350px;">
-            <h2 class="text-center mb-3 ">User Login</h2>
+        <div class="card shadow-lg p-4 rounded mt-4 mb-4 bg-dark w-50" style="width: 350px;">
+            <h2 class="text-center mb-3 text-warning">User Login</h2>
             <form action="/user/Login" method="post">
                 <div class="mb-3">
-                    <label for="email" class="form-label fs-5 fw-bold">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="example@email.com" aria-describedby="email">
+                    <label for="email" class="form-label fs-5 fw-bold text-info">Email</label>
+                    <input type="email" class="form-control bg-dark text-info border-info" name="email" id="email" placeholder="example@email.com" aria-describedby="email">
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label fs-5 fw-bold">Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="******** " id="password">
+                    <label for="password" class="form-label fs-5 fw-bold text-info">Password</label>
+                    <input type="password" class="form-control bg-dark text-light border-info" name="password" placeholder="******** " id="password">
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Submit</button>
+                <button type="submit" class="btn btn-outline-primary w-100 mt-4">Submit</button>
             </form>
             <div class="container mt-3">
-                <p class="fs-5 fw-bold">Don't have an account? <a href="/signup" class="text-dark">Register</a></p>
+                <p class="fs-5 fw-bold text-primary">Don't have an account? <a href="/signup" class="text-primary">Register</a></p>
             </div>
         </div>
     </div>
