--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -39,7 +39,7 @@
     </div>
 
     <div class="container mt-4 text-center">
-        <a href="/allTasks" class="btn btn-primary">View All Tasks</a>
+        <a href="/api/allTasks" class="btn btn-primary">View All Tasks</a>
         <a href="/createTask" class="btn btn-success">Add New Task</a>
     </div>
     <%- include('./partials/script') %>
