--- a/views/taskCreate.ejs
+++ b/views/taskCreate.ejs
@@ -20,7 +20,7 @@
           </div>
           <div class="mb-3">
             <label for="priority" class="form-label fs-4 fw-bold text-info">Priority</label>
-            <select class="form-select" name="priority" id="priority" required>
+            <select class="form-select bg-dark border-info text-info" name="priority" id="priority" required>
               <option value="" disabled selected>Select Priority</option>
               <option value="High">High</option>
               <option value="Medium">Medium</option>
@@ -28,10 +28,10 @@
             </select>
           </div>
           <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input bg-transparent border-info" id="status" name="status">
-            <label class="form-check-label fw-bolder text-info fs-5" for="status">Completed</label>
+            <input type="checkbox" class="form-check-input mt-4 bg-transparent border-info" id="status" name="status">
+            <label class="form-check-label fw-bolder text-info fs-5 mt-3" for="status">Completed</label>
           </div>
-          <button type="submit" class="btn btn-outline-warning w-100">Submit</button>
+          <button type="submit" class="btn btn-outline-warning w-100 mt-2">Submit</button>
         </form>
         <div class="cotainer mt-4">
           <a href="/dashboard" class="btn btn-outline-primary w-25">Go back</a>
