updated user dashboard

--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -9,7 +9,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-12 text-center">
-                <p class="text-info fw-bolder fs-1">Welcome, <span id="username">User</span>!</p>
+                <p class="text-info fw-bolder fs-1">Welcome, <span><u><%- locals.user.name %></u></span> !</p>
                 <p class="text-secondary fs-5">Here is a quick summary of your tasks.</p>
             </div>
         </div>
