--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -19,20 +19,20 @@
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="card shadow-sm p-3">
-                    <h4>10</h4>
-                    <p class="text-muted">Total Tasks</p>
+                    <h4><%-totalTasks %></h4>
+                    <p class="text-muted fs-4">Total Tasks</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm p-3">
-                    <h4>5</h4>
-                    <p class="text-muted">Pending Tasks</p>
+                    <h4><%-pendingTasks %></h4>
+                    <p class="text-muted fs-4">Pending Tasks</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm p-3">
-                    <h4>5</h4>
-                    <p class="text-muted">Completed Tasks</p>
+                    <h4><%-completedTasks %></h4>
+                    <p class="text-muted fs-4">Completed Tasks</p>
                 </div>
             </div>
         </div>
