--- a/views/taskView.ejs
+++ b/views/taskView.ejs
@@ -15,6 +15,7 @@
                         <th>Task Name</th>
                         <th>Task Description</th>
                         <th>Task Status</th>
+                        <th>Task Priority</th>
                         <th>Update Task</th>
                         <th>Delete Task</th>
                     </tr>
@@ -32,6 +33,7 @@
                                     Not Completed
                                 <% } %>
                             </td>
+                            <td class="<%= t.status ? 'text-success' : 'text-danger' %>"><%- t.priority %></td>
                             <td><a href="/api/<%- t._id %>" class="fs-3">📝</a></td>
                             <td><a href="/api/delete/<%- t._id %>" class="fs-3">🗑</a></td>
                         </tr>
